HouseholdInvitationController now passes all the tests